# webserver/handlers/generated/generated.gen.go
@@ -1,6 +1,6 @@
 // Package generated provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.7.1 DO NOT EDIT.
+// Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.7.2 DO NOT EDIT.
 package generated
 
 import (
@@ -402,12 +402,12 @@ type ServerInterface interface {
 	// Change the welcome message
 	// (POST /admin/config/welcomemessage)
 	SetServerWelcomeMessage(w http.ResponseWriter, r *http.Request)
-	// Disconnect inbound stream
-	// (GET /admin/disconnect)
-	DisconnectInboundConnection(w http.ResponseWriter, r *http.Request)
 
 	// (OPTIONS /admin/disconnect)
 	DisconnectInboundConnectionOptions(w http.ResponseWriter, r *http.Request)
+	// Disconnect inbound stream
+	// (POST /admin/disconnect)
+	DisconnectInboundConnection(w http.ResponseWriter, r *http.Request)
 
 	// (OPTIONS /admin/emoji/delete)
 	DeleteCustomEmojiOptions(w http.ResponseWriter, r *http.Request)
@@ -537,24 +537,6 @@ type ServerInterface interface {
 
 	// (OPTIONS /admin/status)
 	StatusAdminOptions(w http.ResponseWriter, r *http.Request)
-	// Force quit the server and restart it
-	// (GET /admin/update/forcequit)
-	AutoUpdateForceQuit(w http.ResponseWriter, r *http.Request)
-
-	// (OPTIONS /admin/update/forcequit)
-	AutoUpdateForceQuitOptions(w http.ResponseWriter, r *http.Request)
-	// Return the auto-update features that are supported for this instance
-	// (GET /admin/update/options)
-	AutoUpdateOptions(w http.ResponseWriter, r *http.Request)
-
-	// (OPTIONS /admin/update/options)
-	AutoUpdateOptionsOptions(w http.ResponseWriter, r *http.Request)
-	// Begin the auto-update
-	// (GET /admin/update/start)
-	AutoUpdateStart(w http.ResponseWriter, r *http.Request)
-
-	// (OPTIONS /admin/update/start)
-	AutoUpdateStartOptions(w http.ResponseWriter, r *http.Request)
 	// Get a paginated list of all users
 	// (GET /admin/users)
 	GetUsers(w http.ResponseWriter, r *http.Request, params GetUsersParams)
@@ -597,12 +579,12 @@ type ServerInterface interface {
 	// Delete a single webhook
 	// (POST /admin/webhooks/delete)
 	DeleteWebhook(w http.ResponseWriter, r *http.Request)
-	// Reset YP configuration
-	// (GET /admin/yp/reset)
-	ResetYPRegistration(w http.ResponseWriter, r *http.Request)
 
 	// (OPTIONS /admin/yp/reset)
 	ResetYPRegistrationOptions(w http.ResponseWriter, r *http.Request)
+	// Reset YP configuration
+	// (POST /admin/yp/reset)
+	ResetYPRegistration(w http.ResponseWriter, r *http.Request)
 	// Register a Fediverse OTP request
 	// (POST /auth/fediverse)
 	RegisterFediverseOTPRequest(w http.ResponseWriter, r *http.Request, params RegisterFediverseOTPRequestParams)
@@ -1460,14 +1442,14 @@ func (_ Unimplemented) SetServerWelcomeMessage(w http.ResponseWriter, r *http.Re
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
-// Disconnect inbound stream
-// (GET /admin/disconnect)
-func (_ Unimplemented) DisconnectInboundConnection(w http.ResponseWriter, r *http.Request) {
+// (OPTIONS /admin/disconnect)
+func (_ Unimplemented) DisconnectInboundConnectionOptions(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
-// (OPTIONS /admin/disconnect)
-func (_ Unimplemented) DisconnectInboundConnectionOptions(w http.ResponseWriter, r *http.Request) {
+// Disconnect inbound stream
+// (POST /admin/disconnect)
+func (_ Unimplemented) DisconnectInboundConnection(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -1711,39 +1693,6 @@ func (_ Unimplemented) StatusAdminOptions(w http.ResponseWriter, r *http.Request
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
-// Force quit the server and restart it
-// (GET /admin/update/forcequit)
-func (_ Unimplemented) AutoUpdateForceQuit(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (OPTIONS /admin/update/forcequit)
-func (_ Unimplemented) AutoUpdateForceQuitOptions(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// Return the auto-update features that are supported for this instance
-// (GET /admin/update/options)
-func (_ Unimplemented) AutoUpdateOptions(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (OPTIONS /admin/update/options)
-func (_ Unimplemented) AutoUpdateOptionsOptions(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// Begin the auto-update
-// (GET /admin/update/start)
-func (_ Unimplemented) AutoUpdateStart(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
-// (OPTIONS /admin/update/start)
-func (_ Unimplemented) AutoUpdateStartOptions(w http.ResponseWriter, r *http.Request) {
-	w.WriteHeader(http.StatusNotImplemented)
-}
-
 // Get a paginated list of all users
 // (GET /admin/users)
 func (_ Unimplemented) GetUsers(w http.ResponseWriter, r *http.Request, params GetUsersParams) {
@@ -1821,14 +1770,14 @@ func (_ Unimplemented) DeleteWebhook(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
-// Reset YP configuration
-// (GET /admin/yp/reset)
-func (_ Unimplemented) ResetYPRegistration(w http.ResponseWriter, r *http.Request) {
+// (OPTIONS /admin/yp/reset)
+func (_ Unimplemented) ResetYPRegistrationOptions(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
-// (OPTIONS /admin/yp/reset)
-func (_ Unimplemented) ResetYPRegistrationOptions(w http.ResponseWriter, r *http.Request) {
+// Reset YP configuration
+// (POST /admin/yp/reset)
+func (_ Unimplemented) ResetYPRegistration(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusNotImplemented)
 }
 
@@ -4179,6 +4128,19 @@ func (siw *ServerInterfaceWrapper) SetServerWelcomeMessage(w http.ResponseWriter
 	handler.ServeHTTP(w, r)
 }
 
+// DisconnectInboundConnectionOptions operation middleware
+func (siw *ServerInterfaceWrapper) DisconnectInboundConnectionOptions(w http.ResponseWriter, r *http.Request) {
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.DisconnectInboundConnectionOptions(w, r)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
 // DisconnectInboundConnection operation middleware
 func (siw *ServerInterfaceWrapper) DisconnectInboundConnection(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
@@ -4189,19 +4151,6 @@ func (siw *ServerInterfaceWrapper) DisconnectInboundConnection(w http.ResponseWr
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.DisconnectInboundConnection(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-// DisconnectInboundConnectionOptions operation middleware
-func (siw *ServerInterfaceWrapper) DisconnectInboundConnectionOptions(w http.ResponseWriter, r *http.Request) {
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.DisconnectInboundConnectionOptions(w, r)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -4978,102 +4927,6 @@ func (siw *ServerInterfaceWrapper) StatusAdminOptions(w http.ResponseWriter, r *
 	handler.ServeHTTP(w, r)
 }
 
-// AutoUpdateForceQuit operation middleware
-func (siw *ServerInterfaceWrapper) AutoUpdateForceQuit(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
-
-	r = r.WithContext(ctx)
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.AutoUpdateForceQuit(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-// AutoUpdateForceQuitOptions operation middleware
-func (siw *ServerInterfaceWrapper) AutoUpdateForceQuitOptions(w http.ResponseWriter, r *http.Request) {
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.AutoUpdateForceQuitOptions(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-// AutoUpdateOptions operation middleware
-func (siw *ServerInterfaceWrapper) AutoUpdateOptions(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
-
-	r = r.WithContext(ctx)
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.AutoUpdateOptions(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-// AutoUpdateOptionsOptions operation middleware
-func (siw *ServerInterfaceWrapper) AutoUpdateOptionsOptions(w http.ResponseWriter, r *http.Request) {
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.AutoUpdateOptionsOptions(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-// AutoUpdateStart operation middleware
-func (siw *ServerInterfaceWrapper) AutoUpdateStart(w http.ResponseWriter, r *http.Request) {
-	ctx := r.Context()
-
-	ctx = context.WithValue(ctx, BasicAuthScopes, []string{})
-
-	r = r.WithContext(ctx)
-
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.AutoUpdateStart(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-// AutoUpdateStartOptions operation middleware
-func (siw *ServerInterfaceWrapper) AutoUpdateStartOptions(w http.ResponseWriter, r *http.Request) {
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.AutoUpdateStartOptions(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
 // GetUsers operation middleware
 func (siw *ServerInterfaceWrapper) GetUsers(w http.ResponseWriter, r *http.Request) {
 	var err error
@@ -5388,6 +5241,19 @@ func (siw *ServerInterfaceWrapper) DeleteWebhook(w http.ResponseWriter, r *http.
 	handler.ServeHTTP(w, r)
 }
 
+// ResetYPRegistrationOptions operation middleware
+func (siw *ServerInterfaceWrapper) ResetYPRegistrationOptions(w http.ResponseWriter, r *http.Request) {
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.ResetYPRegistrationOptions(w, r)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r)
+}
+
 // ResetYPRegistration operation middleware
 func (siw *ServerInterfaceWrapper) ResetYPRegistration(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
@@ -5398,19 +5264,6 @@ func (siw *ServerInterfaceWrapper) ResetYPRegistration(w http.ResponseWriter, r 
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.ResetYPRegistration(w, r)
-	}))
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		handler = middleware(handler)
-	}
-
-	handler.ServeHTTP(w, r)
-}
-
-// ResetYPRegistrationOptions operation middleware
-func (siw *ServerInterfaceWrapper) ResetYPRegistrationOptions(w http.ResponseWriter, r *http.Request) {
-	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-		siw.Handler.ResetYPRegistrationOptions(w, r)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -6937,10 +6790,10 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 		r.Post(options.BaseURL+"/admin/config/welcomemessage", wrapper.SetServerWelcomeMessage)
 	})
 	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/admin/disconnect", wrapper.DisconnectInboundConnection)
+		r.Options(options.BaseURL+"/admin/disconnect", wrapper.DisconnectInboundConnectionOptions)
 	})
 	r.Group(func(r chi.Router) {
-		r.Options(options.BaseURL+"/admin/disconnect", wrapper.DisconnectInboundConnectionOptions)
+		r.Post(options.BaseURL+"/admin/disconnect", wrapper.DisconnectInboundConnection)
 	})
 	r.Group(func(r chi.Router) {
 		r.Options(options.BaseURL+"/admin/emoji/delete", wrapper.DeleteCustomEmojiOptions)
@@ -7072,24 +6925,6 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 		r.Options(options.BaseURL+"/admin/status", wrapper.StatusAdminOptions)
 	})
 	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/admin/update/forcequit", wrapper.AutoUpdateForceQuit)
-	})
-	r.Group(func(r chi.Router) {
-		r.Options(options.BaseURL+"/admin/update/forcequit", wrapper.AutoUpdateForceQuitOptions)
-	})
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/admin/update/options", wrapper.AutoUpdateOptions)
-	})
-	r.Group(func(r chi.Router) {
-		r.Options(options.BaseURL+"/admin/update/options", wrapper.AutoUpdateOptionsOptions)
-	})
-	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/admin/update/start", wrapper.AutoUpdateStart)
-	})
-	r.Group(func(r chi.Router) {
-		r.Options(options.BaseURL+"/admin/update/start", wrapper.AutoUpdateStartOptions)
-	})
-	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/admin/users", wrapper.GetUsers)
 	})
 	r.Group(func(r chi.Router) {
@@ -7132,10 +6967,10 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 		r.Post(options.BaseURL+"/admin/webhooks/delete", wrapper.DeleteWebhook)
 	})
 	r.Group(func(r chi.Router) {
-		r.Get(options.BaseURL+"/admin/yp/reset", wrapper.ResetYPRegistration)
+		r.Options(options.BaseURL+"/admin/yp/reset", wrapper.ResetYPRegistrationOptions)
 	})
 	r.Group(func(r chi.Router) {
-		r.Options(options.BaseURL+"/admin/yp/reset", wrapper.ResetYPRegistrationOptions)
+		r.Post(options.BaseURL+"/admin/yp/reset", wrapper.ResetYPRegistration)
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/auth/fediverse", wrapper.RegisterFediverseOTPRequest)
